--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                 <div class="row">
                     <div class="col-xl-12">
                         <p class="copy_right text-center">
-                            4-28, Yurakucho 1-chome, Chiyoda-ku, Tokyo
-                            <br>+81 71-276-5374
+                            737 Dach Garden Suite 951, South Domenichaven, Maryland
+                            <br>+1-872-955-7320
                             <br>
                             info@economyevolutions.com
                             <br>
